[gd_scene load_steps=9 format=3 uid="uid://unqj071j3se0"]

[ext_resource type="PackedScene" uid="uid://jc4g732lmltx" path="res://characters/shieldman/shieldman.tscn" id="1_hr5cw"]
[ext_resource type="Script" path="res://controllers/shieldman_controller.gd" id="1_tj5ih"]
[ext_resource type="AnimationLibrary" uid="uid://ikuctx682fxu" path="res://characters/shieldman/shieldman_anim.res" id="3_e6k6w"]
[ext_resource type="AudioStream" uid="uid://caoioobyllef2" path="res://assets/sounds/Shield 3.wav" id="4_cwrvx"]
[ext_resource type="Script" path="res://controllers/combat_state_melee.gd" id="4_hkku4"]
[ext_resource type="AudioStream" uid="uid://ri23ee4kbtmg" path="res://assets/sounds/medium-explosion-40472.mp3" id="6_uq8nw"]

[sub_resource type="Animation" id="Animation_qgwk1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shieldman/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shieldman/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ssjrk"]
_data = {
"RESET": SubResource("Animation_qgwk1")
}

[node name="ShieldmanController" type="Node2D" node_paths=PackedStringArray("health_component", "hurt_box_collision", "attack_sound", "hit_sound", "character", "state_machine")]
position = Vector2(-3, 0)
script = ExtResource("1_tj5ih")
shield_cooldown = null
spot_range = 120.0
attack_range = 40.0
cooldown_duration = 2.0
health_component = NodePath("Shieldman/HealthComponent")
hurt_box_collision = NodePath("Shieldman/Hurtbox/CollisionShape2D")
attack_sound = NodePath("Shieldman/Node2D/Attack")
hit_sound = NodePath("Shieldman/Node2D/Hurt")
character = NodePath("Shieldman")
state_machine = NodePath("Shieldman/LimboHSM")
speed = null
jump_force = null
gravity = null
acceleration = null
deceleration = null
max_speed = null

[node name="Shieldman" parent="." node_paths=PackedStringArray("hitbox") instance=ExtResource("1_hr5cw")]
hitbox = NodePath("HitBox")

[node name="AnimatedSprite2D" parent="Shieldman" index="1"]
position = Vector2(-2, -23)
animation = &"Death"

[node name="HealthComponent" parent="Shieldman" index="2"]
max_hp = 100.0

[node name="DamageComponent" parent="Shieldman" index="3"]
damage_amount = 0.0

[node name="AnimationPlayer" parent="Shieldman" index="4"]
libraries = {
"": SubResource("AnimationLibrary_ssjrk"),
"shieldman_anim": ExtResource("3_e6k6w")
}

[node name="LimboHSM" parent="Shieldman" index="6"]
state_conditions = {
"got_hit": "parameters/conditions/got_hit"
}

[node name="Combat" parent="Shieldman/LimboHSM" index="1"]
script = ExtResource("4_hkku4")

[node name="Hurtbox" parent="Shieldman" index="7"]
collision_layer = 4

[node name="HitBox" parent="Shieldman" index="8" node_paths=PackedStringArray("agent", "damage_component")]
agent = NodePath("..")
damage_component = NodePath("../DamageComponent")

[node name="CollisionShape2D" parent="Shieldman/HitBox" index="0"]
disabled = true

[node name="Attack" type="AudioStreamPlayer2D" parent="Shieldman/Node2D" index="2"]
stream = ExtResource("4_cwrvx")
volume_db = -15.0

[node name="Death" type="AudioStreamPlayer2D" parent="Shieldman/Node2D" index="3"]
stream = ExtResource("6_uq8nw")
volume_db = -15.0

[editable path="Shieldman"]
